tests/fails/forlist.t


terra foo()
    for i in 3 do
    end
end

foo()